// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScrollList /> should render when [noContainer=false] 1`] = `
<ScrollList
  document={
    Array [
      Object {
        "foo": "bar",
      },
    ]
  }
  isElement={true}
  noContainer={false}
  onLoadNextPage={[MockFunction]}
  page={1}
  pageCount={2}
>
  <div />
</ScrollList>
`;

exports[`<ScrollList /> should return LoadingPlaceholder when [documents=null] and [page<pageCount] 1`] = `
.c1 {
  -webkit-animation: dzGqrz 0.75s 0s infinite linear;
  animation: dzGqrz 0.75s 0s infinite linear;
  border: 2px solid;
  border-bottom-color: transparent !important;
  border-radius: 100%;
  background: transparent;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  display: inline-block;
  height: 22px;
  width: 22px;
}

.c0 {
  margin-top: 20px;
  text-align: center;
}

<ScrollList
  document={
    Array [
      Object {
        "foo": "bar",
      },
    ]
  }
  documents={null}
  isElement={true}
  onLoadNextPage={[MockFunction]}
  page={1}
  pageCount={2}
>
  <div>
    <LoadingPlaceholder
      margin="20px"
    >
      <LoadingPlaceholder__StyledLoadingPlaceholder
        margin="20px"
      >
        <div
          className="c0"
        >
          <Loader>
            <Loader__StyledLoader
              color="greyDark"
              size="22px"
            >
              <div
                className="c1"
                color="greyDark"
                size="22px"
              >
                <div />
              </div>
            </Loader__StyledLoader>
          </Loader>
        </div>
      </LoadingPlaceholder__StyledLoadingPlaceholder>
    </LoadingPlaceholder>
  </div>
</ScrollList>
`;

exports[`<ScrollList /> should return React.Fragment when [noContainer=true] 1`] = `
<ScrollList
  document={
    Array [
      Object {
        "foo": "bar",
      },
    ]
  }
  isElement={true}
  onLoadNextPage={[MockFunction]}
  page={1}
  pageCount={2}
>
  <div />
</ScrollList>
`;
